--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,3 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\13125877\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+file.reference.commons-logging-1.2.jar=C:\\Java\\Plugins\\UCanAccess-5.0.1.bin\\lib\\commons-logging-1.2.jar
+user.properties.file=C:\\Users\\Samsung\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
